--- a/FLS.CoffeeDesk/appsettings.json
+++ b/FLS.CoffeeDesk/appsettings.json
@@ -35,5 +35,9 @@
         ]
       }
     }
+  },
+  "ConnectionStrings": {
+    "EPiServerDB": "Server=.;Database=cmsCoffeeDesk;User Id=coffeeDeskUser;Password=PaSSw0rd123!;MultipleActiveResultSets=True",
+    "EcfSqlConnection": "Server=.;Database=commerceCoffeeDesk;User Id=coffeeDeskUser;Password=PaSSw0rd123!;"
   }
 }
