--- a/FLS.CoffeeDesk/FLS.CoffeeDesk.csproj
+++ b/FLS.CoffeeDesk/FLS.CoffeeDesk.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EPiServer.CMS" Version="12.*" />
     <PackageReference Include="EPiServer.Commerce" Version="14.*" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
