Script to recreate database

--- a/FLS.CoffeeDesk/appsettings.json
+++ b/FLS.CoffeeDesk/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "ConnectionStrings": {
-    "EPiServerDB": "Server=.;Database=cmsCoffeeDesk;User Id=coffeeDeskUser;Password=PaSSw0rd123!;MultipleActiveResultSets=True",
-    "EcfSqlConnection": "Server=.;Database=commerceCoffeeDesk;User Id=coffeeDeskUser;Password=PaSSw0rd123!;"
+    "EPiServerDB": "Server=.;Database=cmsCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;MultipleActiveResultSets=True",
+    "EcfSqlConnection": "Server=.;Database=commerceCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;"
   }
 }
