--- a/FLS.CoffeeDesk/appsettings.json
+++ b/FLS.CoffeeDesk/appsettings.json
@@ -36,6 +36,7 @@
       }
     }
   },
+  "TestImagesFolderPath": "C:\\meet-up\\Media\\Coffee",
   "ConnectionStrings": {
     "EPiServerDB": "Server=.;Database=cmsCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;MultipleActiveResultSets=True",
     "EcfSqlConnection": "Server=.;Database=commerceCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;"
