Add Docker support

--- a/FLS.CoffeeDesk/appsettings.json
+++ b/FLS.CoffeeDesk/appsettings.json
@@ -7,7 +7,7 @@
       "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
-  "urls": "http://*:8000/;https://*:8001/;",
+  "urls": "http://*:8000/;",
   "AllowedHosts": "*",
   "EPiServer": {
     "Commerce": {
@@ -36,7 +36,7 @@
       }
     }
   },
-  "TestImagesFolderPath": "C:\\meet-up\\Media\\Coffee",
+  "TestImagesFolderPath": "C:\\dev\\Coffee",
   "ConnectionStrings": {
     "EPiServerDB": "Server=.;Database=cmsCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;MultipleActiveResultSets=True",
     "EcfSqlConnection": "Server=.;Database=commerceCoffeeDesk;User Id=coffeeDeskUser;Password=Wd2vAkb6LkGGDZbV;"
