--- a/FLS.CoffeeDesk/FLS.CoffeeDesk.csproj
+++ b/FLS.CoffeeDesk/FLS.CoffeeDesk.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EPiServer.CMS" Version="12.*" />
